# toki

./: .gitignore  .mcp.json  Cargo.toml  INSTALL.md  LICENSE  README.md  dist-workspace.toml  rustfmt.toml
.claude/hooks/: post_tool_use.sh  session_end.sh  session_start.sh
.github/workflows/: update-homebrew.yml
Formula/: toki.rb
contrib/: toki.plist  toki.service
crates/toki-ai/: Cargo.toml
crates/toki-ai/src/: ai_provider.rs  ai_service.rs  auto_linker.rs  embedding.rs  gravity.rs  insights.rs  issue_matcher.rs  issue_sync.rs  lib.rs  notion_issue_sync.rs  notion_mapper.rs  rules.rs  standup.rs  time_analyzer.rs  time_estimator.rs  work_summary.rs
crates/toki-ai/src/auto_linker/: mod.rs  tests.rs
crates/toki-ai/src/gravity/: mod.rs  tests.rs
crates/toki-ai/src/insights/: mod.rs  tests.rs
crates/toki-ai/src/issue_matcher/: mod.rs  tests.rs
crates/toki-ai/src/providers/: anthropic.rs  google.rs  ollama.rs  openai.rs
crates/toki-ai/src/rules/: mod.rs  tests.rs
crates/toki-ai/src/standup/: mod.rs  tests.rs
crates/toki-ai/src/time_analyzer/: mod.rs  tests.rs
crates/toki-ai/src/time_estimator/: mod.rs  tests.rs
crates/toki-ai/src/work_summary/: mod.rs  tests.rs
crates/toki-cli/: Cargo.toml
crates/toki-cli/src/: main.rs
crates/toki-cli/src/commands/: config.rs  daemon.rs  data.rs  estimate.rs  helpers.rs  init.rs  insights.rs  issue_sync.rs  learn.rs  mod.rs  next.rs  notion.rs  plane.rs  privacy.rs  project.rs  report.rs  review.rs  scope.rs  session.rs  standup.rs  suggest.rs  summary.rs  sync.rs  update.rs
crates/toki-core/: Cargo.toml
crates/toki-core/src/: ai_classifier.rs  classifier.rs  config.rs  context_collector.rs  daemon.rs  daemon_control.rs  ipc.rs  lib.rs  privacy.rs  session_manager.rs
crates/toki-core/src/monitor/: linux.rs  macos.rs  mod.rs  windows.rs
crates/toki-detector/: Cargo.toml
crates/toki-detector/src/: context.rs  git.rs  lib.rs  parser.rs
crates/toki-detector/src/ide/: mod.rs  vscode.rs
crates/toki-integrations/: Cargo.toml
crates/toki-integrations/src/: github.rs  gitlab.rs  http.rs  lib.rs  notion.rs  plane.rs  traits.rs  webhook.rs
crates/toki-integrations/src/notion/: client.rs  mod.rs  schema.rs  types.rs
crates/toki-mcp/: Cargo.toml
crates/toki-mcp/src/: handlers.rs  main.rs
crates/toki-mcp/src/handlers/: mod.rs  tests.rs
crates/toki-storage/: Cargo.toml
crates/toki-storage/src/: db.rs  encryption.rs  lib.rs  migrations.rs  models.rs
crates/toki-storage/src/db/: activity_spans.rs  ai_config.rs  claude_sessions.rs  helpers.rs  issue_candidates.rs  mod.rs  projects.rs  session_issues.rs  session_outcomes.rs  synced_issues.rs
