[package]
name = "toki-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
regex.workspace = true
toml.workspace = true
async-trait.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true

toki-storage = { path = "../toki-storage" }
toki-integrations = { path = "../toki-integrations" }
fastembed = "5.3.1"

[lints.rust]
unsafe_code = "forbid"
unused_variables = "deny"
unused_imports = "deny"
dead_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
complexity = "deny"
cognitive_complexity = "deny"
too_many_arguments = "deny"
non_ascii_literal = "deny"

