[package]
name = "toki-core"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
async-trait.workspace = true
regex.workspace = true
uuid.workspace = true
bincode = "1.3.3"
dirs = "5.0.1"

toki-storage = { path = "../toki-storage" }
toki-detector = { path = "../toki-detector" }
toki-ai = { path = "../toki-ai" }
lru = "0.12"
libc = "0.2"
daemonize = { version = "0.5.0", optional = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }

[lints.rust]
# Allow unsafe code for platform-specific system API interactions (macOS APIs)
unsafe_code = "allow"
unused_variables = "deny"
unused_imports = "deny"
dead_code = "deny"
# Allow unexpected_cfgs from objc crate macros
unexpected_cfgs = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
complexity = "deny"
cognitive_complexity = "deny"
too_many_arguments = "deny"
non_ascii_literal = "deny"

