[package]
name = "toki-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
git2 = { version = "0.19.0", default-features = false }
log = "0.4.22"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.2"
strum_macros = "0.26.2"
url = "2.5.2"
dirs = "5.0.1"
walkdir = "2.4"
tempfile = "3.10.1"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
unused_variables = "deny"
unused_imports = "deny"
dead_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
complexity = "deny"
cognitive_complexity = "deny"
too_many_arguments = "deny"
non_ascii_literal = "deny"

