[package]
name = "toki-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for Toki time tracking"

[[bin]]
name = "toki-mcp"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true

# MCP SDK - use git version for latest API
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }

# Internal crates
toki-storage = { path = "../toki-storage" }
toki-integrations = { path = "../toki-integrations" }
toki-ai = { path = "../toki-ai" }
toki-detector = { path = "../toki-detector" }

[lints.rust]
unsafe_code = "forbid"
unused_variables = "deny"
unused_imports = "deny"
dead_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
complexity = "deny"
cognitive_complexity = "deny"
too_many_arguments = "deny"
non_ascii_literal = "deny"
